# fabm-vims

./: ReadMe.md
.github/workflows/: vims.yml
src/: vims_model_library.F90
src/cosine/: misc_module.txt
src/icm/: fabm_icm_misc.F90  misc_module.txt
src/models/vims/: CMakeLists.txt  vims_model_library.F90
src/models/vims/cosine/: cosine.F90  fabm_cosine_misc.F90
src/models/vims/icm/: icm.F90
testcases/: fabm-vims-cosine.yaml  fabm-vims-icm.yaml
